Fix for misalignment of parent indicator in some positions

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -31,7 +31,8 @@
 						width: 1.5rem;
 						opacity: 0.5;
 						font-family: FontAwesome;
-						content: "\f078";		
+						content: "\f078";
+						text-align: center;
 					}
 					&.g-selected {
 						&:after {
